Fix issues on mobile devices

--- a/static/styles/app.css
+++ b/static/styles/app.css
@@ -44,7 +44,7 @@ html, body {
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
-@media(max-width:400px) {
+@media(max-width:900px) {
   .container {
     width: 90%;
     font-size: 0.5em;
